--- a/layout/page_head.html
+++ b/layout/page_head.html
@@ -10,6 +10,9 @@
         {% if author %}
         <meta name="author" content="{{ author }}">
         {% endif %}
+        {% if current_content_dir and current_content_dir.generate_rss %}
+        <link rel="alternate" type="application/rss+xml" title="{{ title }}{% if site_subtitle %} - {{ site_subtitle }}{% endif %}" href="rss.xml"/>
+        {% endif %}
 
         <style>
             /* Shamefully copied from the awesome Bear Blog (https://bearblog.dev/) */
